[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherwood"
version = "0.0.0"
description = "sherwood"
license = { file = "LICENSE" }
dependencies = [
    "argon2_cffi",
    "bcrypt",
    "fastapi",
    "gunicorn",
    "httpx",
    "passlib",
    "psycopg2-binary",    
    "pydantic[email]",
    "pytest",
    "pytest-mock",
    "python-dotenv",
    "python-jose",
    "sqlalchemy",
    "uvicorn",
    "yfinance",
]

[tool.pytest.ini_options]
addopts = "-vv --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
ignore_missing_imports = true
strict = true